[gd_scene load_steps=6 format=3 uid="uid://dm7ascpw8bxbl"]

[ext_resource type="Texture2D" uid="uid://c35r7gy18ch5b" path="res://resources/titlelong.png" id="1_q3tf1"]
[ext_resource type="Script" path="res://scene/UI.gd" id="1_w2vtm"]

[sub_resource type="ImageTexture" id="ImageTexture_j2fvs"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6r38o"]
texture = SubResource("ImageTexture_j2fvs")

[sub_resource type="Theme" id="Theme_uqsx6"]
RichTextLabel/styles/normal = SubResource("StyleBoxTexture_6r38o")

[node name="Node2D" type="Node2D"]

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_w2vtm")

[node name="levelmenu" type="Control" parent="UI"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CenterContainer" type="CenterContainer" parent="UI/levelmenu"]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/levelmenu/CenterContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/levelmenu/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="1" type="Button" parent="UI/levelmenu/CenterContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "1"

[node name="2" type="Button" parent="UI/levelmenu/CenterContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "2"

[node name="3" type="Button" parent="UI/levelmenu/CenterContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "3"

[node name="4" type="Button" parent="UI/levelmenu/CenterContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "4"

[node name="mainmenu" type="Control" parent="UI"]
anchors_preset = 0
offset_right = 50.0
offset_bottom = 50.0

[node name="CenterContainer" type="CenterContainer" parent="UI/mainmenu"]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/mainmenu/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="TextureRect" type="TextureRect" parent="UI/mainmenu/CenterContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("1_q3tf1")
expand_mode = 5

[node name="play" type="Button" parent="UI/mainmenu/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(600, 150)
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Play"

[node name="help" type="Button" parent="UI/mainmenu/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(600, 150)
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Help"

[node name="credits" type="Button" parent="UI/mainmenu/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(600, 150)
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Credits"

[node name="credits" type="Control" parent="UI"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CenterContainer" type="CenterContainer" parent="UI/credits"]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/credits/CenterContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="UI/credits/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme = SubResource("Theme_uqsx6")
text = "Project lead: Mateo"

[node name="mainmenu" type="Button" parent="UI/credits/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Main Menu"

[connection signal="pressed" from="UI/levelmenu/CenterContainer/VBoxContainer/HBoxContainer/1" to="UI" method="_on__pressed"]
[connection signal="pressed" from="UI/mainmenu/CenterContainer/VBoxContainer/play" to="UI" method="_on_play_pressed"]
[connection signal="pressed" from="UI/mainmenu/CenterContainer/VBoxContainer/credits" to="UI" method="_on_credits_pressed"]
[connection signal="pressed" from="UI/credits/CenterContainer/VBoxContainer/mainmenu" to="UI" method="_on_mainmenu_pressed"]
